--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 .alltowers{
   display:flex;
+  background-color: #0099cc;
+  width:800px;
+  
 }
 
 .tower1, .tower2, .tower3{
@@ -22,7 +25,7 @@
                               transparent 100%);
 }
 
-#gamepiece1{
+#gamepiece2{
   margin:0 auto;
   background-color: black;
   width:50px;
@@ -35,7 +38,7 @@
   vertical-align: middle;
 }
 
-#gamepiece2{
+#gamepiece3{
   margin:0 auto;
   background-color: blue;
   width:75px;
@@ -48,7 +51,7 @@
   vertical-align: middle;
 }
 
-#gamepiece3{
+#gamepiece4{
   margin:0 auto;
   background-color: grey;
   width:100px;
@@ -61,7 +64,7 @@
   vertical-align: middle;
 }
 
-#gamepiece4{
+#gamepiece5{
   margin:0 auto;
   background-color: green;
   width:125px;
@@ -74,7 +77,7 @@
   vertical-align: middle;
 }
 
-#gamepiece5{
+#gamepiece6{
   margin:0 auto;
   background-color: yellow;
   width:150px;
@@ -87,7 +90,7 @@
   vertical-align: middle;
 }
 
-#gamepiece6{
+#gamepiece7{
   margin:0 auto;
   background-color: purple;
   width:175px;
@@ -100,7 +103,7 @@
   vertical-align: middle;
 }
 
-#gamepiece7{
+#gamepiece8{
   margin:0 auto;
   background-color: red;
   width:200px;
@@ -113,7 +116,7 @@
   vertical-align: middle;
 }
 
-#gamepiece8{
+#gamepiece9{
   margin:0 auto;
   background-color: gold;
   width:225px;
