--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
   font-family: 'Aladin', cursive;
   font-size:70px;
   width:200px;
-  margin-bottom: 40px;
+
   animation: pulse 5s ease infinite;
 }
 h1:hover{
@@ -23,20 +23,20 @@ h2{
   font-family: 'Nothing You Could Do', cursive;
 }
 
-.alltowers{
+#alltowers{
   display:flex;
   background-image: url(http://l.rgbimg.com/cache1ntFHn/users/o/oe/oeildenuit/600/2dRRfSu.jpg);
   background-size: cover;
   width:800px;
   margin:20px auto;
   border:solid grey 10px;
-
+  margin-top: 5px;
   outline: 0px dashed #9C0E1E;
   box-shadow: 0 0 0 2px #E4E981;
   transition: all .8s;
   opacity:.4;
 }
-.alltowers:hover{
+#alltowers:hover{
   transform: scale(1.02);
   opacity:1;
   outline: 35px dashed #313035;
@@ -108,4 +108,59 @@ h2{
   background-color: #AD5682;
   width:225px;
   background-image: url(http://res.freestockphotos.biz/pictures/11/11551-a-wood-grain-texture-pv.jpg)
+}
+
+/* Dropdown Button */
+
+.dropbtn {
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    padding:16px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    border-bottom: solid white 3px;
+    max-width:200px;
+    margin:0 auto;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  margin-top: 50px;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 110px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+    z-index: 1;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: black;
 }
