--- a/style.css
+++ b/style.css
@@ -16,13 +16,20 @@ h1:hover{
 }
 
 h2{
-  margin-top: 40px;
+  margin-top: 50px;
   color:white;
   text-align: center;
   font-size:20px;
   font-family: 'Nothing You Could Do', cursive;
 }
+#score{
+  color:white;
+  font-size:30px;
+  text-align:center;
+  margin-top:-70px;
+  z-index:1;
 
+}
 #alltowers{
   display:flex;
   background-image: url(http://l.rgbimg.com/cache1ntFHn/users/o/oe/oeildenuit/600/2dRRfSu.jpg);
